# basic

01cuda_resize/: CMakeLists.txt  demo_color_channel_invert.cu  main.cu  readme.md  resize.cu  resize.h  test_resize.cu
gtest/: CMakeLists.txt  math_functions.h  readme.md  test_math_functions.cpp
